--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     }
 
     if (new Date().getDay === 5) {
-      document.getElementsByClassName('isitfriday')[0].innerText = 'Yess!!';
+      document.getElementsByClassName('isitfriday')[0].innerText = 'Yess!! 🎉🎉🎉';
     } else {
       document.getElementsByClassName('isitfriday')[0].innerText = 'nope...';
       document.getElementById('countdown').classList.remove('hidden');
